Добавляет атрибут alt и aria-label

--- a/Block__1-3/index__1-3.html
+++ b/Block__1-3/index__1-3.html
@@ -14,19 +14,19 @@
         <button class="header-body__button" type="button"><img src="img/icon-repair.svg" alt="icon-repair"></button>
         <button class="header-body__button" type="button"><img src="img/icon-search.svg" alt="icon-search"></button>
         <button class="header-body__button" type="button"><img src="img/divider.svg" alt="icon-divider"></button>
-        <button class="header-body__button" type="button"><img src="img/icon-call.svg"></button>
-        <button class="header-body__button" type="button"><img src="img/icon-chat.svg"></button>
-        <button class="header-body__button" type="button"><img src="img/icon-profile.svg"></button>
+        <button class="header-body__button" type="button"><img src="img/icon-call.svg" alt="icon-call"></button>
+        <button class="header-body__button" type="button"><img src="img/icon-chat.svg" alt="icon-chat"></button>
+        <button class="header-body__button" type="button"><img src="img/icon-profile.svg" alt="icon-profile"></button>
         <button class="header-body__button" type="button"><img src="img/divider.svg" alt="icon-divider"></button>
     </header>
     <main class="main-body">
         <div class="main-body__menu main-menu">
             <div class="main-menu__header menu-header">
-                <div class="menu-header__elem"><img class="menu-header__img" src="img/highlight.svg">Услуги и сервисы</div>
+                <div class="menu-header__elem"><img class="menu-header__img" src="img/highlight.svg" alt="highlight">Услуги и сервисы</div>
                 <button type="button" class="menu-header__elem"><img src="img/icon-search.svg" alt="icon-search"></button>
-                <button type="button" class="menu-header__elem">Статус ремонта</button>
+                <button type="button" class="menu-header__elem" aria-label="Статус">Статус ремонта</button>
                 <button type="button" class="menu-header__elem"><img src="img/icon-repair.svg" alt="icon-repair"></button>
-                <button type="button" class="menu-header__elem">Оставить заявку</button>
+                <button type="button" class="menu-header__elem" aria-label="Заявка">Оставить заявку</button>
             </div>
             <ul class="main-menu__content content-menu">
                 <li class="content-menu__elem">
@@ -87,7 +87,7 @@
             </div>
             <div class="main-content__scroll content-scroll">
                 <div class="main-scroll__text"><label for="main-content_checker">Читать далее</label></div>
-                <button class="content-scroll__btn" type="button"><img src="img/expand.svg"></button>
+                <button class="content-scroll__btn" type="button"><img src="img/expand.svg" alt="expand"></button>
             </div>
             <div class="main-content__image content-image"></div>
         </div>
